CHATS_SIT/force-app/main/default/objects/T_JOB_SEARCH__c.object
<CustomObject>
    <description>Job search tracking</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CDE_VRFYD__c</fullName>
        <description>Verified</description>
        <label>Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_ANNIV__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_VRFYD__c</fullName>
        <description>Date Verified</description>
        <label>Date Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Job Search</relationshipLabel>
        <relationshipName>T_SBSD_INDIV14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Search</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Job Search ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Later_Than_Begin_Date</fullName>
        <active>true</active>
        <description>Effective End Date must be after the Effective Begin Date.</description>
        <errorConditionFormula>NOT( IDN_CLIENT__r.Is_Peak_Data__c ) &amp;&amp; NOT( IDN_CLIENT__r.Is_CBMS_Data__c ) &amp;&amp; DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date must be after the Effective Begin Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warning_Message_before_saving_the_record</fullName>
        <active>true</active>
        <description>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case</description>
        <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c),NOT( IDN_CLIENT__r.Is_CBMS_Data__c ), NOT(IDN_CLIENT__r.Is_Primary_Parent_Caretaker__c),IDN_CLIENT__r.Age__c &lt; VALUE( $Label.Teen_Parent_Age_Limit ),NOT(IDN_CLIENT__r.Has_Allowed_Relationship__c),NOT(Ignore__c))</errorConditionFormula>
        <errorMessage>This record may not be appropriate for this individual based on their age and/or relationship to the primary caretaker of this case(to continue saving please tick Ignore checkbox)</errorMessage>
    </validationRules>
    <validationRules>
    	<fullName>BeginDateWithin31DaysFuture</fullName>
   	    <active>true</active>
    	<description>Begin Date cannot be more than 31 days in the future</description>
    	<errorConditionFormula>DTE_BEGIN_EFFV__c &gt;  TODAY() +31</errorConditionFormula>
    	<errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    	<errorMessage>Begin Date cannot be more than 31 days in the future</errorMessage>
     </validationRules>
</CustomObject>